style.scss
@use 'base';
@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");

$text-primary: #276814;
$primary: #78cf53ac;
$secondary: #1a71bc;
$bg: #F5f5f5;
:root{
    font-size:15px;
}
:root,
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Georama', sans-serif;
    font-weight: normal;
}
*{
    opacity:0;
}
html{
    scroll-behavior:smooth;
}
body {
    background-color: $bg;
    overflow-x: hidden;
}

a {
    text-decoration: none;
    color: $text-primary;
    transition: 0.5s ease;
}

h3 {
    font-size: 1.5em;

}

button {
    border: solid 1px $primary;
    border-radius: 2px;
    background-color: none;
}

button:hover {
    background-color: $primary;
    transform: scale(1.1);
    transition: 0.5s ease;
    color: white;
    cursor: pointer;
}


.btn {
    background-color: #1a71bc;
    text-decoration: none;
    color: white;
    padding: 10px;
    text-align: center;
    border-radius: 5px;
}

.btn:hover {
    transform: scale(1.1);
    transition: 0.2s ease;
    background-color: #11178c
}

/*Header styles*/
h1 {
    font-size: 1rem;
    justify-self: start;
    margin-right: auto;
}

header {
    margin-bottom: 150px;
    color: $text-primary;
    height: 100vh;
    display: flex;
    flex-direction: column;
    background-image: url('../images/palm_tree.png');
    background-position: right;
    background-size: 50%;
    background-repeat: no-repeat;

    div {
        margin: auto 0;
    }

}

nav {
    background-color: $bg;
    max-height: 25px;
    @include base.breakpoint-nav;

    ul {
        display: flex;
        list-style-type: none;
        justify-content: end;
        padding: 5px;


        @include base.breakpoint-nav-items;

        li {
            margin: 0px 15px;
            background-color: $bg;
        }

    }



    i {
        @include base.nav-button;
        display: none;
        float: right;

    }

}



#intro-header {
    width: 60%;
    display: flex;
    flex-direction: column;


    a {
        margin: auto;
        color: black;
        border: solid $primary 2px;
        text-decoration: none;
        margin-top: 50px;
        padding: 5px;
    }

    h2 {
        margin: 0px 5px;
        font-size: 2.5rem;
        background-color: #b1d1f077;
        border: solid 3px white;
        outline: solid 4px $primary;
        padding: 10px 0px;
    }

}




/*About section styling*/

#about-us {
    height: 250px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    font-size: 1.2em;

    p {
        margin: auto;
        color: white;
        @include base.theme($theme: textOutline);
    }

    ul {

        display: flex;
        justify-content: space-around;
        color: white;
        @include base.theme($theme: textOutline);
        list-style-type: none;
        width: 100%;

        li {
            display: flex;
            flex-direction: column;
            align-items: center;
            text-align: center;

            i {
                font-size: 2rem;
                margin: 20px
            }
        }
    }
}

.transparent-bg {
    height: 250px;
    object-fit: cover;
    object-position: center;
    opacity: 0.3;
    width: 100%;
    position: absolute;
    z-index: -1;
}


/*Styling for the vacation plan sections*/
.plans {
    margin: 100px 0;
    display: flex;
    flex-direction: column;

    p {
        text-align: center;
        margin: 0px auto 25px;
        width: max(50%, 250px);
    }

    .btn {
        margin: auto;
    }

    h3 {
        text-align: center;
    }

    h4 {
        position: relative;
        text-align: center;
        color: $bg;
        grid-area: 1/1;
        @include base.theme($theme: textOutline);

    }

    ul {
        width: 100%;
        padding: 50px 5%;
        display: flex;
        flex-direction: column;
        align-items: center;
        @include base.breakpoint-md-flex;
        list-style-type: none;
        flex-wrap: wrap;
        gap: 10px;
    }

    li {
        border-radius:5px;
        margin: 0px 10px;
        display: grid;
        grid-template-rows: 1fr;
        grid-template-columns: 1fr;
        box-shadow: rgb(110, 110, 110) 0px 10px 10px;

    }


    img {
        border-radius: 5px;
        grid-area: 1/1;
        width: 200px;
        height: 200px;

    }


    
}





/*Custom Plans*/

#custom-plans {


    background-color: $bg;
    padding: 5% 10%;
    background-image: url("../images/custom_services_bg.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right;


    div {
        margin: 10px;

        p {
            margin: 50px 0px;
        }

        ul {
            list-style-type: none;
            margin: 50px 0px;

            li {
                margin: 25px 0;
                display: flex;
                align-items: center;
                gap: 10px;

                i {
                    color: $primary;
                    font-size: 3em;
                    margin: 10px 0px;
                }
            }
        }

    
    }




}



/*Styling the additional services section*/
#additional-services {

    margin: 50px 0px;
    padding: 5%;

    h2 {
        text-align: center;
    }

    ul {
        list-style-type: none;
        display: flex;
        flex-direction: column;
        @include base.breakpoint-md-flex;
        padding: 50px 25px;
        border-radius: 5px;
    }

    li {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: none;

        i {
            color: $primary;
            font-size: 4rem;
            margin: 10px 0px;
        }

        p {
            padding: 5px;
            text-align: center;
        }

    }

    h3 {
        margin: 10px 0px;
        color: white;
        @include base.theme($theme: textOutline);
    }


}

footer {

    font-size: 0.8rem;
    color: white;
    background-color: $secondary;
    padding: 10px;

    ul {
        margin: 10px 0px;
        display: flex;
        flex-direction: row;
        list-style-type: none;
        justify-content: center;


        a:hover {
            color: rgb(204, 203, 203);
            cursor: pointer;
        }
    }

    li {
        margin: 5px;

        a {
            color: white;
        }
    }

    ul:first-of-type {
        li {
            margin: 5px 10px;

            i {
                font-size: 1.5rem;
            }

        }
    }


}

